# pydomino-prebuilt

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
pydomino/: __main__.py  pydomino.py
