[project]
name = "pydomino-prebuilt"
version = "1.2.0-post2"
description = "16kHz モノラル音声に対して指定した音素をアライメントするライブラリ"
readme = "README.md"
dependencies = []
requires-python = ">= 3.10"
authors = [
    {name = "DWANGO Co., Ltd.", email = "shun_ueda@dwango.co.jp"}
]
classifiers = [
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/tsukumijima/pydomino-prebuilt"
Repository = "https://github.com/tsukumijima/pydomino-prebuilt"
Documentation = "https://dwangomediavillage.github.io/pydomino/"

[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project.scripts]
domino = "pydomino.__main__:main"